@@ -2,8 +2,10 @@ gtk+3.0 (3.20.6-3) UNRELEASED; urgency=medium
 
   * debian/control.in: Add hicolor-icon-theme as a hard dependency, the
     package is small and only provides the directory structure of the theme.
+  * debian/control.in: Move adwaita-icon-theme dependency to the main package
+    and demote it to a Recommends.
 
- -- Laurent Bigonville <bigon@debian.org>  Thu, 14 Jul 2016 01:46:33 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Thu, 14 Jul 2016 02:11:43 +0200
 
 gtk+3.0 (3.20.6-2) unstable; urgency=medium
 
